# tip_calculator

./: README.md  main.py  pyproject.toml
Tip Calculator 1.0/data/flutter_assets/: NOTICES.Z
output/data/flutter_assets/app/: app.zip.hash
