[tool.poetry]
name = "tip-calculator"
version = "0.1.0"
description = ""
authors = ["cuhseondruh <casandralopez2017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.24.1"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
